Fix: `UserNavigation` ready tx count highlight alignment

--- a/src/modules/pages/components/RouteLayouts/UserNavigation.css
+++ b/src/modules/pages/components/RouteLayouts/UserNavigation.css
@@ -116,15 +116,15 @@
 }
 
 .readyTransactionsCount {
-  margin: -13px 0 0 -1px;
-  padding-top: 1px;
+  margin: -27px 0 0 -22px;
+  padding-top: 2px;
   height: 20px;
   min-width: 20px;
-  position: absolute;
   border-radius: 50px;
   background-color: var(--danger);
   font-size: var(--size-tiny);
   font-weight: 600;
+  text-align: center;
   color: var(--colony-white);
   box-shadow: 0px 2px 11px var(--drop-shadow);
 }
